tests/data/bad/bad_cfg_import.py
from __future__ import annotations

from ntc import CN

from ..base_cfg import cfg

cfg = CN(cfg)
